--- a/style.css
+++ b/style.css
@@ -4,9 +4,28 @@
   width: 750px;    
   aspect-ratio: 1 / 1;
   border: 1px solid black;
+  
 }
 
 .children {
   border: 1px solid #ddd;
   box-sizing: border-box;
+}
+body {
+  display: flex;
+  justify-content: center;   
+  align-items: center;    
+  height: 100vh;
+  margin: 0;
+  flex-direction: column;
+}
+.buttons {
+  flex-direction: row;
+  
+}
+button {
+  width: 140px
+}
+.title {
+ font-size: 120px;
 }
